crates/bonsaidb-macros/tests/ui/schema/missing_name.rs
use bonsaidb::core::schema::Schema;

#[derive(Schema)]
struct Test;

fn main() {}
